полный адаптив Header на все устройства

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				Что делать, когда не можешь делать ничего <br />
 				Или почему нам так сложно сконцентрироваться, особенно когда очень надо
 			</p>
-			<span class="header__decoration">pec</span>
+			<span class="header__decoration" aria-hidden="true">rec</span>
 		</header>
 		<script src="./scripts/script.js"></script>
 	</body>
