--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 										в том, что её просто не существует. Исследователи
 										<a
 											href="https://dana.org/article/multicosts-of-multitasking/"
-											>выяснили</a
+											class="info__link">выяснили</a
 										>, что мозгу тяжело концентрироваться даже на двух делах
 										одновременно. А когда в поле внимания попадает несколько
 										важных задач, организм паникует и выделяет кортизол и
@@ -200,7 +200,10 @@
 									</h3>
 									<p class="info__segment-text">
 										Или даже пробегитесь. Лучше найти парк или лес: один
-										эксперимент показал, что созерцание природы повышает
+										эксперимент <a
+											href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+											class="info__link">показал</a
+										>, что созерцание природы повышает
 										концентрацию, в то время как после просмотра городских
 										пейзажей она наоборот понижается. Можно совместить прогулку
 										с физическими упражнениями или бегом — так в мозг поступит
