--- a/index.html
+++ b/index.html
@@ -44,205 +44,194 @@
 					</li>
 				</ul>
 			</nav>
-			<h1 class="header__main-title title__1">no focus</h1>
-			<p class="header__text title decore-bg">
+			<h1 class="header__main-title title">no focus</h1>
+			<p class="header__text decore-bg">
 				Что делать, когда не можешь делать ничего <br />
 				Или почему нам так сложно сконцентрироваться, особенно когда очень надо
 			</p>
 			<span class="header__decoration" aria-hidden="true">rec</span>
+			<span class="header__corners corners" aria-hidden="true"></span>
 		</header>
 		<main class="main">
-			<section class="info">
-				<ul class="info__list">
-					<li class="info__item">
-						<article class="info__card">
-							<h2 class="info__title title__2">
-								Почему сосредоточиться так сложно
-							</h2>
-							<div class="info__body">
-								<div class="info__segment">
-									<h3 class="info__segment-title title__3 decore-bg">
-										Многозадачность
-									</h3>
-									<p class="info__segment-text">
-										Особенно сложно сосредоточиться, когда задач много и все они
-										— важные. Где же легендарная многозадачность, когда она так
-										нужна вам (и всем нанимающим менеджерам этого мира)? А дело
-										в том, что её просто не существует. Исследователи
-										<a
-											href="https://dana.org/article/multicosts-of-multitasking/"
-											class="info__link">выяснили</a
-										>, что мозгу тяжело концентрироваться даже на двух делах
-										одновременно. А когда в поле внимания попадает несколько
-										важных задач, организм паникует и выделяет кортизол и
-										адреналин — «гормоны стресса». Из-за этого мы работаем
-										невнимательно: ошибаемся и быстро устаём.
-									</p>
-								</div>
-								<div class="info__segment">
-									<h3 class="info__segment-title title__3 decore-bg">
-										Дофамин
-									</h3>
-									<p class="info__segment-text">
-										С гормонами стресса всё понятно, но дальше — ещё интереснее.
-										В нашей невозможности сосредоточиться замешана и полная
-										противоположность стрессу — дофамин. Это вещество участвует
-										в системе вознаграждения мозга. Причём тут он? Мы часто
-										отвлекаемся от важной задачи на что-то более «приятное» для
-										мозгов. Например, смотрим лайки в соцсетях. В это время и
-										выделяется дофамин — и мы чувствуем удовольствие. Получается
-										замкнутый круг: чем больше отвлекаешься, тем больше
-										удовольствия получаешь.
-									</p>
-								</div>
-							</div>
-						</article>
-					</li>
-					<li class="info__item">
-						<article class="info__card">
-							<h2 class="info__title title__2">
-								Что снижает концентрацию внимания?
-							</h2>
-							<div class="info__body">
-								<div class="info__segment">
-									<h3 class="info__segment-title title__3 decore-bg">
-										Многозадачность
-									</h3>
-									<p class="info__segment-text">
-										Как концентрация может снижаться из-за… концентрации? Любая
-										стрессовая ситуация (и резко меняющийся мир в целом)
-										заставляет наш мозг постоянно «сканировать» окружающую среду
-										на предмет опасности. Например, читать новости вместо
-										работы. Но быть собранными всё время — невозможно.
-										Концентрация — мышца, и она может не выдержать, если не
-										давать ей отдохнуть.
-									</p>
-								</div>
-								<article class="info__segment">
-									<h3 class="info__segment-title title__3 decore-bg">Еда</h3>
-									<p class="info__segment-text">
-										«Быстрые углеводы» — сахар, белый хлеб, сладости —
-										молниеносно доставляют в мозг энергию и помогают ему лучше
-										работать. Но уходит эта энергия также быстро, как и
-										приходит. А мы в результате попадаем на «углеводные качели»:
-										как только действие «быстрых углеводов» заканчивается, мы
-										чувствуем усталость и сонливость. И хотим ещё больше быстрых
-										углеводов.
-									</p>
-								</article>
-								<div class="info__segment">
-									<h3 class="info__segment-title title__3 decore-bg">
-										Гаджеты
-									</h3>
-									<p class="info__segment-text">
-										Да-да, это та самая ситуация, когда на экране ноутбука —
-										код, в наушниках — подкаст, а на компьютере фоном — ещё и
-										видео с забавными утятами. В результате мозг пытается
-										переключиться с одной задачи на другую — и просто не может.
-										А чтобы вернуться к состоянию полной концентрации, человеку
-										в среднем нужно 20 минут. Вот и получается, что чем больше
-										времени мы проводим в гаджетах, тем больше времени затем
-										нужно, чтобы вернуться к работе.
-									</p>
-								</div>
-							</div>
-						</article>
-					</li>
-					<li class="info__item">
-						<article class="info__card">
-							<h2 class="info__title title__2">
-								Как концентрироваться лучше, чем золотая рыбка (то есть дольше
-								трёх секунд)
-							</h2>
-							<div class="info__body">
-								<div class="info__segment">
-									<h3 class="info__segment-title title__3 decore-bg">
-										5 простых (на самом деле не очень) советов
-									</h3>
-								</div>
-								<article class="info__segment">
-									<h3
-										class="info__segment-title title__3 decore-bg title__3--normal"
-									>
-										Представьте небо и облака
-									</h3>
-									<p class="info__segment-text">
-										Или листья в ручье. Тут дело в лёгкой медитации, которая
-										помогает успокоиться. Ведь часто именно тревожные мысли о
-										сложных задачах как раз и мешают эти сложные задачи делать.
-										В такие моменты можно закрыть глаза и представить, что
-										чистое небо — это вы, а облака — тревожные мысли. И сколько
-										бы их ни было — ясное небо всегда будет где-то там, за
-										тучами, и никуда не денется. Это упражнение поможет
-										вернуться в настоящий момент, а не волноваться о
-										потенциальных проблемах из будущего.
-									</p>
-								</article>
-								<div class="info__segment">
-									<h3
-										class="info__segment-title title__3 decore-bg title__3--normal"
-									>
-										Включите музыку
-									</h3>
-									<p class="info__segment-text">
-										Но не любую, и не любимую. Любимая может быть связана с
-										сильными положительными эмоциями, которые тоже очень сильно
-										отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная.
-										Можно вообще попробовать включить плейлист в «белым шумом»
-										или нейромузыкой.
-									</p>
-								</div>
-								<div class="info__segment">
-									<h3
-										class="info__segment-title title__3 decore-bg title__3--normal"
-									>
-										Прогуляйтесь
-									</h3>
-									<p class="info__segment-text">
-										Или даже пробегитесь. Лучше найти парк или лес: один
-										эксперимент <a
-											href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
-											class="info__link">показал</a
-										>, что созерцание природы повышает
-										концентрацию, в то время как после просмотра городских
-										пейзажей она наоборот понижается. Можно совместить прогулку
-										с физическими упражнениями или бегом — так в мозг поступит
-										ещё больше кислорода и он будет лучше работать. Но и простая
-										двадцатиминутная прогулка — тоже отличный вариант.
-									</p>
-								</div>
-								<div class="info__segment">
-									<h3
-										class="info__segment-title title__3 decore-bg title__3--normal"
-									>
-										Хорошо ешьте
-									</h3>
-									<p class="info__segment-text">
-										Мы — не ваша бабушка, но это правда важно. Выбирайте
-										продукты, которые препятствуют резким скачкам сахара в
-										крови. Например, с высоким содержанием клетчатки: овощи,
-										ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб
-										из цельнозерновой пшеницы.
-									</p>
-								</div>
-								<div class="info__segment">
-									<h3
-										class="info__segment-title title__3 decore-bg title__3--normal"
-									>
-										Читайте
-									</h3>
-									<p class="info__segment-text">
-										Настоящие бумажные книги. Это правда помогает с
-										концентрацией: чтобы прочитать пост в соцсети, достаточно
-										нескольких минут или даже секунд. А вот интересная книга
-										способна затянуть и на несколько часов и круто тренирует
-										направленное внимание.
-									</p>
-								</div>
-							</div>
-						</article>
-					</li>
-				</ul>
+			<section class="section">
+				<h2 class="section__title decore-color">
+					Почему сосредоточиться так сложно
+				</h2>
+				<div class="section__body">
+					<article class="card">
+						<h3 class="card__title decore-bg">Многозадачность</h3>
+						<div class="card__description">
+							<p>
+								Особенно сложно сосредоточиться, когда задач много и все они —
+								важные. Где же легендарная многозадачность, когда она так нужна
+								вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+								её просто не существует. Исследователи
+								<a
+									href="https://dana.org/article/multicosts-of-multitasking/"
+									class="card__link main__link"
+									>выяснили</a
+								>, что мозгу тяжело концентрироваться даже на двух делах
+								одновременно. А когда в поле внимания попадает несколько важных
+								задач, организм паникует и выделяет кортизол и адреналин —
+								«гормоны стресса». Из-за этого мы работаем невнимательно:
+								ошибаемся и быстро устаём.
+							</p>
+						</div>
+					</article>
+					<article class="card">
+						<h3 class="card__title decore-bg">Дофамин</h3>
+						<div class="card__description">
+							<p>
+								С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+								нашей невозможности сосредоточиться замешана и полная
+								противоположность стрессу — дофамин. Это вещество участвует в
+								системе вознаграждения мозга. Причём тут он? Мы часто
+								отвлекаемся от важной задачи на что-то более «приятное» для
+								мозгов. Например, смотрим лайки в соцсетях. В это время и
+								выделяется дофамин — и мы чувствуем удовольствие. Получается
+								замкнутый круг: чем больше отвлекаешься, тем больше удовольствия
+								получаешь.
+							</p>
+						</div>
+					</article>
+				</div>
+			</section>
+			<section class="section section-alt">
+				<h2 class="section__title decore-color">
+					Что снижает концентрацию внимания?
+				</h2>
+				<div class="section-alt__body">
+					<article class="card">
+						<h3 class="card__title decore-bg">Многозадачность</h3>
+						<div class="card__description">
+							<p>
+								Как концентрация может снижаться из-за… концентрации? Любая
+								стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+								наш мозг постоянно «сканировать» окружающую среду на предмет
+								опасности. Например, читать новости вместо работы. Но быть
+								собранными всё время — невозможно. Концентрация — мышца, и она
+								может не выдержать, если не давать ей отдохнуть.
+							</p>
+						</div>
+					</article>
+					<article class="card">
+						<h3 class="card__title decore-bg">Еда</h3>
+						<div class="card__description">
+							<p>
+								«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+								доставляют в мозг энергию и помогают ему лучше работать. Но
+								уходит эта энергия также быстро, как и приходит. А мы в
+								результате попадаем на «углеводные качели»: как только действие
+								«быстрых углеводов» заканчивается, мы чувствуем усталость и
+								сонливость. И хотим ещё больше быстрых углеводов.
+							</p>
+						</div>
+					</article>
+					<article class="card">
+						<h3 class="card__title decore-bg">Гаджеты</h3>
+						<div class="card__description">
+							<p>
+								Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+								наушниках — подкаст, а на компьютере фоном — ещё и видео с
+								забавными утятами. В результате мозг пытается переключиться с
+								одной задачи на другую — и просто не может. А чтобы вернуться к
+								состоянию полной концентрации, человеку в среднем нужно 20
+								минут. Вот и получается, что чем больше времени мы проводим в
+								гаджетах, тем больше времени затем нужно, чтобы вернуться к
+								работе.
+							</p>
+						</div>
+					</article>
+				</div>
+			</section>
+			<section class="section">
+				<h2 class="section__title decore-color">
+					Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+					секунд)
+				</h2>
+				<div class="section__body">
+					<article class="card">
+						<h3 class="card__title decore-bg">
+							5 простых (на самом деле не очень) советов
+						</h3>
+					</article>
+					<article class="card">
+						<h3 class="card__title card__title--normal decore-bg">
+							Представьте небо и облака
+						</h3>
+						<div class="card__description">
+							<p>
+								Или листья в ручье. Тут дело в лёгкой медитации, которая
+								помогает успокоиться. Ведь часто именно тревожные мысли о
+								сложных задачах как раз и мешают эти сложные задачи делать. В
+								такие моменты можно закрыть глаза и представить, что чистое небо
+								— это вы, а облака — тревожные мысли. И сколько бы их ни было —
+								ясное небо всегда будет где-то там, за тучами, и никуда не
+								денется. Это упражнение поможет вернуться в настоящий момент, а
+								не волноваться о потенциальных проблемах из будущего.
+							</p>
+						</div>
+					</article>
+					<article class="card">
+						<h3 class="card__title card__title--normal decore-bg">
+							Включите музыку
+						</h3>
+						<div class="card__description">
+							<p>
+								Но не любую, и не любимую. Любимая может быть связана с сильными
+								положительными эмоциями, которые тоже очень сильно отвлекают.
+								Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+								попробовать включить плейлист в «белым шумом» или нейромузыкой.
+							</p>
+						</div>
+					</article>
+					<article class="card">
+						<h3 class="card__title card__title--normal decore-bg">
+							Прогуляйтесь
+						</h3>
+						<div class="card__description">
+							<p>
+								Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+								<a
+									href="https://dana.org/article/multicosts-of-multitasking/"
+									class="card__link main__link"
+									>показал</a
+								>, что созерцание природы повышает концентрацию, в то время как
+								после просмотра городских пейзажей она наоборот понижается.
+								Можно совместить прогулку с физическими упражнениями или бегом —
+								так в мозг поступит ещё больше кислорода и он будет лучше
+								работать. Но и простая двадцатиминутная прогулка — тоже отличный
+								вариант.
+							</p>
+						</div>
+					</article>
+
+					<article class="card">
+						<h3 class="card__title card__title--normal decore-bg">
+							Хорошо ешьте
+						</h3>
+						<div class="card__description">
+							<p>
+								Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+								которые препятствуют резким скачкам сахара в крови. Например, с
+								высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+								чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
+								пшеницы.
+							</p>
+						</div>
+					</article>
+					<article class="card">
+						<h3 class="card__title card__title--normal decore-bg">Читайте</h3>
+						<div class="card__description">
+							<p>
+								Настоящие бумажные книги. Это правда помогает с концентрацией:
+								чтобы прочитать пост в соцсети, достаточно нескольких минут или
+								даже секунд. А вот интересная книга способна затянуть и на
+								несколько часов и круто тренирует направленное внимание.
+							</p>
+						</div>
+					</article>
+				</div>
 			</section>
 			<section class="gallery">
 				<h2 class="gallery__title decore-bg title__3">А можно в картинках?</h2>
@@ -274,10 +263,11 @@
 					/>
 				</div>
 			</section>
-			<footer class="footer">
-				<h2 class="footer__title title__1">focus</h2>
-			</footer>
 		</main>
+		<footer class="footer">
+			<h2 class="footer__title title">focus</h2>
+			<span class="footer__corners corners" aria-hidden="true"></span>
+		</footer>
 		<script src="./scripts/script.js"></script>
 	</body>
 </html>
