Отпрвака на ревью№2

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								её просто не существует. Исследователи
 								<a
 									href="https://dana.org/article/multicosts-of-multitasking/"
-									class="card__link main__link"
+									class="card__link link"
 									>выяснили</a
 								>, что мозгу тяжело концентрироваться даже на двух делах
 								одновременно. А когда в поле внимания попадает несколько важных
@@ -194,7 +194,7 @@
 								Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
 								<a
 									href="https://dana.org/article/multicosts-of-multitasking/"
-									class="card__link main__link"
+									class="card__link link"
 									>показал</a
 								>, что созерцание природы повышает концентрацию, в то время как
 								после просмотра городских пейзажей она наоборот понижается.
