Отпрвака на ревью№3

--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
 						</h3>
 					</article>
 					<article class="card">
-						<h3 class="card__title card__title--normal decore-bg">
+						<h4 class="card__title card__title--normal decore-bg">
 							Представьте небо и облака
-						</h3>
+						</h4>
 						<div class="card__description">
 							<p>
 								Или листья в ручье. Тут дело в лёгкой медитации, которая
@@ -173,9 +173,9 @@
 						</div>
 					</article>
 					<article class="card">
-						<h3 class="card__title card__title--normal decore-bg">
+						<h4 class="card__title card__title--normal decore-bg">
 							Включите музыку
-						</h3>
+						</h4>
 						<div class="card__description">
 							<p>
 								Но не любую, и не любимую. Любимая может быть связана с сильными
@@ -186,9 +186,9 @@
 						</div>
 					</article>
 					<article class="card">
-						<h3 class="card__title card__title--normal decore-bg">
+						<h4 class="card__title card__title--normal decore-bg">
 							Прогуляйтесь
-						</h3>
+						</h4>
 						<div class="card__description">
 							<p>
 								Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
@@ -207,9 +207,9 @@
 					</article>
 
 					<article class="card">
-						<h3 class="card__title card__title--normal decore-bg">
+						<h4 class="card__title card__title--normal decore-bg">
 							Хорошо ешьте
-						</h3>
+						</h4>
 						<div class="card__description">
 							<p>
 								Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
@@ -221,7 +221,7 @@
 						</div>
 					</article>
 					<article class="card">
-						<h3 class="card__title card__title--normal decore-bg">Читайте</h3>
+						<h4 class="card__title card__title--normal decore-bg">Читайте</h4>
 						<div class="card__description">
 							<p>
 								Настоящие бумажные книги. Это правда помогает с концентрацией:
@@ -234,7 +234,7 @@
 				</div>
 			</section>
 			<section class="gallery">
-				<h2 class="gallery__title decore-bg title__3">А можно в картинках?</h2>
+				<h2 class="gallery__title decore-bg">А можно в картинках?</h2>
 				<div class="gallery__grid">
 					<img
 						src="images/sunset.png"
